--- a/package.json
+++ b/package.json
@@ -12,6 +12,15 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "next": "16.0.1"
+    ,"lucide-react": "^0.259.0",
+    "clsx": "^1.2.1",
+  "class-variance-authority": "^0.7.1",
+    "tailwind-merge": "^1.14.0",
+    "@radix-ui/react-popover": "^2.1.16",
+    "@radix-ui/react-dialog": "^2.1.16",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-accordion": "^2.1.16",
+    "@radix-ui/react-avatar": "^2.1.16"
   },
   "devDependencies": {
     "typescript": "^5",
