--- a/package.json
+++ b/package.json
@@ -1,35 +1,30 @@
 {
-  "name": "portfolio-v2",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.1"
-    ,"lucide-react": "^0.259.0",
-    "clsx": "^1.2.1",
-  "class-variance-authority": "^0.7.1",
-    "tailwind-merge": "^1.14.0",
-    "@radix-ui/react-popover": "^2.1.16",
-    "@radix-ui/react-dialog": "^2.1.16",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-accordion": "^2.1.16",
-    "@radix-ui/react-avatar": "^2.1.16"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1"
-  }
+    "name": "portfolio-v2",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "eslint"
+    },
+    "dependencies": {
+        "react": "19.2.0",
+        "react-dom": "19.2.0",
+        "next": "16.0.1",
+        "lucide-react": "^0.259.0",
+        "clsx": "^1.2.1",
+        "class-variance-authority": "^0.7.1",
+        "tailwind-merge": "^1.14.0"
+    },
+    "devDependencies": {
+        "typescript": "^5",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "@tailwindcss/postcss": "^4",
+        "tailwindcss": "^4",
+        "eslint": "^9",
+        "eslint-config-next": "16.0.1"
+    }
 }
