--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
         "lint": "eslint"
     },
     "dependencies": {
+        "@vercel/analytics": "^1.5.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^1.2.1",
+        "lucide-react": "^0.259.0",
+        "next": "16.0.1",
         "react": "19.2.0",
         "react-dom": "19.2.0",
-        "next": "16.0.1",
-        "lucide-react": "^0.259.0",
-        "clsx": "^1.2.1",
-        "class-variance-authority": "^0.7.1",
         "tailwind-merge": "^1.14.0"
     },
     "devDependencies": {
-        "typescript": "^5",
+        "@tailwindcss/postcss": "^4",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
-        "@tailwindcss/postcss": "^4",
-        "tailwindcss": "^4",
         "eslint": "^9",
-        "eslint-config-next": "16.0.1"
+        "eslint-config-next": "16.0.1",
+        "tailwindcss": "^4",
+        "typescript": "^5"
     }
 }
