--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^1.2.1",
         "lucide-react": "^0.259.0",
-        "next": "16.0.1",
-        "react": "19.2.0",
-        "react-dom": "19.2.0",
+        "next": "^16.0.7",
+        "react": "^19.2.1",
+        "react-dom": "^19.2.1",
         "tailwind-merge": "^1.14.0"
     },
     "devDependencies": {
