--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "next": "^16.0.7",
         "react": "^19.2.1",
         "react-dom": "^19.2.1",
+        "react-markdown": "^9.0.1",
+        "rehype-raw": "^7.0.0",
         "tailwind-merge": "^1.14.0"
     },
     "devDependencies": {
